[tool.poetry]
name = "fund-analyser-compute"
version = "0.0.1"
description = ""
authors = ["Karl Chan"]

[tool.poetry.dependencies]
python = "3.8.2"
ciso8601 = "^2.1.3"
falcon = "^2.0.0"
ffn = { git = "https://github.com/karl-chan/ffn.git", tag = "v0.3.5" }
humanize = "^3.1.0"
matplotlib = "^3.3.2"
numpy = "^1.19.2"
overrides = "^3.1.0"
pandas = "^1.1.3"
PyQt5 = { version = "^5.15.1", markers = "sys_platform == 'darwin'" }
pytest = "^6.1.1"
pytest-profiling = "^1.7.0"
requests = "^2.24.0"
rust-indicators = [
    { path = "./bin/rust_indicators-0.1.0-cp38-cp38-manylinux1_x86_64.whl", markers = "sys_platform == 'linux'" },
    { path = "./bin/rust_indicators-0.1.0-cp38-cp38-macosx_10_7_x86_64.whl", markers = "sys_platform == 'darwin'" }
]
scikit-learn = "^0.23.2"
TA-Lib = [
    { version = "^0.4.19", markers = "sys_platform == 'darwin'" },
    { path = "./bin/TA_Lib-0.4.18-cp38-cp38-win32.whl", markers = "sys_platform == 'win32'" }
]
ujson = "^4.0.1"
waitress = "^1.4.4"

[tool.poetry.dev-dependencies]
maturin = "^0.8.3"
mypy = "^0.790"
