[tool.poetry]
name = "fund-analyser-compute"
version = "0.0.1"
description = ""
authors = ["Karl Chan"]

[tool.poetry.dependencies]
python = "3.9.5"
ciso8601 = "*"
falcon = "*"
ffn = { git = "https://github.com/karl-chan/ffn.git", tag = "v0.3.5" }
humanize = "*"
matplotlib = "*"
numpy = "*"
overrides = "*"
pandas = "*"
PyQt5 = { version = "*", markers = "sys_platform == 'darwin'" }
pytest = "*"
pytest-profiling = "*"
requests = "*"
rust-indicators = [
    { path = "./bin/rust_indicators-0.1.0-cp39-cp39-manylinux1_x86_64.whl", markers = "sys_platform == 'linux'" },
    { path = "./bin/rust_indicators-0.1.0-cp39-cp39-macosx_10_7_x86_64.whl", markers = "sys_platform == 'darwin'" }
]
TA-Lib = [
    { version = "*", markers = "sys_platform == 'darwin'" },
    { path = "./bin/TA_Lib-0.4.19-cp39-cp39-win32.whl", markers = "sys_platform == 'win32'" }
]
ujson = "*"
waitress = "*"

[tool.poetry.dev-dependencies]
maturin = "*"
mypy = "*"
