[tool.poetry]
name = "fund-analyser-compute"
version = "0.0.1"
description = ""
authors = ["Karl Chan"]

[tool.poetry.dependencies]
python = "3.10.2"
ciso8601 = "*"
falcon = "*"
ffn = "*"
humanize = "*"
matplotlib = "*"
numpy = "*"
overrides = "*"
pandas = "*"
PyQt5 = { version = "*", markers = "sys_platform == 'darwin'" }
pytest = "*"
pytest-profiling = "*"
requests = "*"
rust-indicators = [
    { path = "./bin/rust_indicators-0.1.0-cp310-cp310-manylinux_2_24_x86_64.whl", markers = "sys_platform == 'linux'" },
    { path = "./bin/rust_indicators-0.1.0-cp310-cp310-macosx_10_7_x86_64.whl", markers = "sys_platform == 'darwin'" }
]
TA-Lib = [
    { version = "*", markers = "sys_platform == 'darwin'" },
    { path = "./bin/TA_Lib-0.4.24-cp310-cp310-win32.whl", markers = "sys_platform == 'win32'" }
]
ujson = "*"
waitress = "*"

[tool.poetry.dev-dependencies]
maturin = "*"
mypy = "*"

[mypy]
plugins = "numpy.typing.mypy_plugin"