[package]
name = "rust-indicators"
version = "0.1.0"
authors = ["Karl Chan <karl-chan@bitbucket.org>"]
edition = "2018"

[dependencies]
ndarray = { version = "0.15.4", features = ["rayon"] }
numpy = "0.16.0"
pyo3 = { version = "0.16.0", features = ["extension-module"] }

[lib]
name = "rust_indicators"
crate-type = ["cdylib"]